--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php" : ">=5.4.0",
         "illuminate/config": ">= 5.0.0",
-        "illuminate/support" : ">= 5.0.0",
+        "illuminate/support" : ">= 5.0.0"
     },
     "require-dev" : {
         "phpunit/phpunit" : ">=4.0",
